[package]
name = "litecraft"
version = "0.1.0"
authors = ["Miguel Peláez <kernelfreeze@protonmail.com>"]

[dependencies]
image = "0.20"
zip = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4"
cgmath = "0.16.1"
lazy_static = "1.1"
simple_logger = "0.5.0"
threadpool = "1.0"

[dependencies.glium]
git = "https://github.com/Litecrafty/glium"