[package]
name = "litecraft"
version = "0.1.0"
authors = ["Miguel Peláez <kernelfreeze@protonmail.com>"]

[dependencies]
image = "0.21"
zip = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4"
cgmath = "0.17.0"
lazy_static = "1.1"
simple_logger = "1.0.1"
threadpool = "1.0"
rhai = "0.9.0"
smallvec = "0.6.5"

[dependencies.conrod]
git = "https://github.com/Litecrafty/conrod"
features = ["glium", "winit"]

[dependencies.glium]
git = "https://github.com/Litecrafty/glium"
features = ["icon_loading"]